--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Este es un titulo</h1>
 <a href="https://www.google.com">Este es un enlace</a>
 <div>
-    <h2>Este es un titulo nuevo</h2>
-    <p>Este es un nuevo parrafo</p>
+    <h2>Este es un titulo nuevo 1</h2>
+    <p>Este es un nuevo parrafo 2</p>
 
 </div>
 
