Se agrego mi nombre

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="https://www.google.com">Este es un enlace</a>
 <div>
     <h2>Este es un titulo nuevo 1</h2>
-    <p>Este es un nuevo parrafo 2</p>
+    <p>Este es un nuevo parrafo 2 Douglas Gallardo</p>
 
 </div>
 
